@@ -1,11 +1,12 @@
 NetLabel Tools CHANGELOG
 ==============================================================================
 
-* Version X.XX (XXXXXX)
+* Release X.XX (XXXXXX)
 ------------------------------------------------------------------------------
 o Changed to support the updated use of Netlink attributes by NetLabel
 o Ported to use the libnl (version 1.0-pre5/6) library
 o Try to cleanup the error reporting a little bit
+o Changed the version/release information
 
 * Version 0.16 (August 3, 2006)
 ------------------------------------------------------------------------------
